<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EditorAddProductActivity"
    tools:showIn="@layout/activity_editor_add_product"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_information_str_label"
        android:layout_gravity="center"
        android:textSize="@dimen/header_txt_size"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:id="@+id/lin_lay_product_data"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <!--Hold the name of the fields-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/product_name_str_hint"
                    android:layout_marginEnd="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin" />

                <EditText
                    android:id="@+id/et_product_name"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_name_str_hint"
                    android:inputType="text"
                    android:gravity="right"
                    />

            </LinearLayout>

            <!--Hold the fields-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/product_price_str_hint"
                    android:layout_marginEnd="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin" />

                <EditText
                    android:id="@+id/et_product_price"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_price_str_hint"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/product_quantity_str_hint"
                    android:layout_marginEnd="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin" />
                <EditText
                    android:id="@+id/et_product_quant"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_quantity_str_hint"
                    android:inputType="number"
                    android:text="@string/base_quantity"/>
            </LinearLayout>



        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/activity_margin"
        android:paddingTop="@dimen/activity_margin"
        android:id="@+id/tool_buttons"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/decrease_quant"
            android:text="@string/decrease_by_one"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/increase_quant"
            android:text="@string/increase_by_one"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linlay_div"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@android:color/black"
        android:orientation="vertical"
        android:padding="8dp">

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/supplier_information_str_label"
        android:layout_gravity="fill_horizontal"
        android:textSize="@dimen/header_txt_size"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/lin_lay_product_data"

        android:id="@+id/lin_lay_supplier_data"
        >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/supplier_name_str_hint"
            android:layout_marginEnd="@dimen/activity_margin"
            android:layout_marginRight="@dimen/activity_margin" />

        <EditText
            android:id="@+id/et_supplier_name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/supplier_name_str_hint"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/supplier_phone_str_hint"
            android:layout_marginEnd="@dimen/activity_margin"
            android:layout_marginRight="@dimen/activity_margin" />

        <EditText
            android:id="@+id/et_supplier_phone"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/supplier_phone_str_hint"
            android:inputType="number|phone" />
    </LinearLayout>


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/call_supplier"
        android:layout_gravity="center"
        android:text="@string/call_supplier"
        />
</LinearLayout>